# retailhero-recomender-baseline

./: pyproject.toml
sandbox/: 0.eda.ipynb  1.global_top.ipynb  2.1.als.ipynb  2.2.item-to-item.ipynb  3.user2user.ipynb
src/: config.py  utils.py
